# nativescript-mason

./: .gitignore  Cargo.toml  package-lock.json  package.json  references.d.ts  web-interop.md
apps/: display-demo.html  transform-demo.html
apps/demo/: package.json
apps/demo-angular/: .detoxrc.js  .gitignore  nativescript.config.ts  package.json  project.json  times.html
apps/demo-angular/e2e/: screenshots.js  starter.test.js
apps/demo-angular/scripts/: patch-platform-android.js
apps/demo-angular/src/: app-routing.module.ts  app.module.ts  home.component.html  home.component.ts
apps/demo-solid/: nativescript.config.ts  package-lock.json  package.json  references.d.ts  tailwind.config.js  tsconfig.json  webpack.config.js
apps/demo-solid/src/: app.tsx  index.ts
apps/demo-vue/: package-lock.json  package.json
apps/demo-vue/app/: app.css  app.ts
apps/demo-vue/patches/: @nativescript+tailwind+4.0.7.patch
apps/demo/src/: app.ts
crates/mason-android/src/: lib.rs  node.rs
crates/mason-c/src/: lib.rs  node.rs  style.rs
crates/mason-core/src/: lib.rs  node.rs  tree.rs  tree_inline.rs
crates/mason-core/tests/: css_inline_mixed.rs  css_inline_spec.rs  flex_inline_mix.rs  grid_android_repro.rs  grid_overflow_test.rs  grid_root_percent_width.rs  grid_text_container_children.rs  grid_text_padding_trace.rs  inline_more.rs  inline_reflow.rs  inline_root_percent_width.rs  padding_root_width.rs  regress_grid_root_padding.rs  scroll_overflow_x.rs  scroll_root_percent_width.rs  wpt_css_align_batch1.rs  wpt_css_align_batch2.rs  wpt_css_align_batch3.rs  wpt_css_display_batch1.rs  wpt_css_display_flow_root_batch1.rs  wpt_css_display_flow_root_batch2.rs  wpt_ported_batch2.rs  (+1 more)
crates/mason-windows/: Cargo.toml
tools/scripts/: masonkit-build-ios-framework.sh
(+904 files in other folders)
