[workspace]
members = ["crates/mason-core", "crates/mason-android", "crates/mason-ios", "crates/mason-playground", "crates/mason-c"]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
debug = false
incremental = false
strip = true
debug-assertions = false
overflow-checks = false

[workspace.dependencies]
taffy = { git = "https://github.com/DioxusLabs/taffy.git", rev = "d1ff7e339b9ee35b33858779f8d7653197e93d92" }
style_atoms = { git = "https://github.com/servo/stylo", rev = "85ae0b1", package = "stylo_atoms" }
